# disk-mosaic

./: .gitignore  Cargo.toml  LICENCE  README.md  build.rs
.github/workflows/: release.yml
packaging/DiskMosaic.app/Contents/: Info.plist
packaging/DiskMosaic.app/Contents/Resources/: AppIcon.icns
src/: analysis_result.rs  analyzer.rs  data.rs  disk_analyzer.rs  main.rs  settings.rs  task.rs  util.rs
src/service/: mod.rs
src/service/storage_manager/: mod.rs  storage.rs
src/ui/: about_dialog.rs  data_widget.rs  mod.rs  path_bar.rs  select_target.rs  settings_panel.rs  treemap_panel.rs
src/ui/app_state/: analyzer.rs  mod.rs  result_view.rs  select_target.rs
src/ui/settings_panel/: folder_list_panel.rs  mod.rs
