[package]
name = "disk-mosaic"
version = "0.1.1"
edition = "2024"
build = "build.rs"
license = "MIT"

[dependencies]
egui = "0.31"
egui_extras = { version = "0.31", features = ["svg"] }
eframe = "0.31"
env_logger = "0.11"
filesize = { version = "0.2.0", optional = true }
home = "0.5.11"
humansize = "2.1.3"
log = "0.4"
egui_solarized = "0.2"
opener = { version = "0.8.2", features = ["reveal"] }
rayon = "1.10.0"
rfd = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
sysinfo = "0.35"
thiserror = "2.0"
treemap = "0.3.2"
unicode-normalization = "0.1.24"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = []
filesize_crate = ["filesize"]