[package]
name = "Disk-Mosaic"
version = "0.1.2"
edition = "2024"
build = "build.rs"
authors = ["Matthieu Casanova"]
description = "Disk Mosaic is a disk utility helping you to identify biggest folders"
homepage = "https://github.com/kpouer/Disk-Mosaic"
repository = "https://github.com/kpouer/Disk-Mosaic"
license = "MIT"
readme = "README.md"
keywords = ["desktop", "file", "folder", "disk"]
categories = ["filesystem"]

[dependencies]
egui = "0.32"
egui_extras = { version = "0.32", features = ["svg"] }
eframe = "0.32"
env_logger = "0.11"
filesize = { version = "0.2.0", optional = true }
home = "0.5.11"
humansize = "2.1.3"
log = "0.4"
egui_solarized = "0.3.1"
opener = { version = "0.8.2", features = ["reveal"] }
rayon = "1.10.0"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
sysinfo = "0.36"
thiserror = "2.0"
treemap = "0.3.2"
unicode-normalization = "0.1.24"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = []
filesize_crate = ["filesize"]

[profile.release]
codegen-units = 1
opt-level = 2
lto = true

[package.metadata.bundle]
name = "DiskMosaic"
identifier = "com.kpouer.diskmosaic"
icon = ["packaging/DiskMosaic.app/Contents/Resources/AppIcon.icns"]
version = "0.1.2"
copyright = "Copyright (c) 2025 Matthieu Casanova"
category = "Utility"
short_description = "Disk Mosaic is a disk utility helping you to identify biggest folders"
